// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<li
  aria-label="aria-label"
  class="css-mjs1z4-euiTimelineItem"
  data-test-subj="test subject string"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          />
        </span>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props event is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          >
            commented
          </span>
        </span>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props timelineIcon is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          />
        </span>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          />
          <span
            class="euiCommentEvent__headerTimestamp"
          >
            <time>
              21 days ago
            </time>
          </span>
        </span>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props type custom is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <div
      class="euiCommentEvent euiCommentEvent--custom css-p2ten8-euiCommentEvent-custom"
    />
  </div>
</li>
`;

exports[`EuiComment props type regular is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          />
        </span>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props type update is rendered 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent euiCommentEvent--update css-kr7aki-euiCommentEvent-update"
    >
      <div
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-8nrfo3-euiCommentEvent__updatePanel"
      >
        <div
          class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
        >
          <span
            class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
          >
            <span
              class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
            >
              someuser
            </span>
            <span
              class="euiCommentEvent__headerEvent"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment renders a body 1`] = `
<li
  class="css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-11owldj-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent euiCommentEvent--regular css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
      >
        <span
          class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
        >
          <span
            class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
          >
            someuser
          </span>
          <span
            class="euiCommentEvent__headerEvent"
          />
        </span>
      </figcaption>
      <div
        class="euiCommentEvent__body css-1gv33fs-euiCommentEvent__body"
      >
        <p>
          This is the body.
        </p>
      </div>
    </figure>
  </div>
</li>
`;
